[package]
name = "rustFireCrud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# firebase-rs is used for the firebase api
# serde is used for json parsing
# serde_json is used for json parsing
# tokio is used for async/await

[dependencies]
firebase-rs = "2.0.5" 
serde = "1.0.147" 
serde_json = "1.0" 
tokio = { version = "1.21.2", features = ["full"] }	


